package adaits.cursoJava.colegio;

public enum GrupoProfesional {

}
