package adaits.cursoJava.interfaces;

public interface Printable {
    String printConsola();
    String printHTML();
    String printJSON();
    String list(Object obj);
}
