@startuml

interface Printable

class Colegio {
    - String nombre;
    - ArrayList<Empleado> empleados;
    - ArrayList<Titulacion> titulaciones;
    + Colegio(String nombre)
    + void addTitulacion (Titulacion titulacion)
    + ArrayList<Titulacion> getTitulaciones()
    + String getNombre()
    + ArrayList<Empleado> getEmpleados(
}

class Empleado{

}
class Alumno{
    - ArrayList<MatriculaAsignatura> asignaturasMatriculado;
     -ArrayList<MatriculaAsignatura> aprobadas
}
abstract PersonalAuxiliar

enum GrupoProfesional

enum GrupoCotizacion {
INGENIEROS_Y_LICENCIADOS
INGENIEROS_TECNICOS
JEFES_ADMINISTRATIVOS_Y_DE_TALLER
AYUDANTES_NO_TITULADOS
OFICIALES_ADMINISTRATIVOS
SUBALTERNOS
AUXILIARES_ADMINISTRATIVOS
OFICIALES_DE_1_Y_2
OFICIALES_DE_3_Y_ESPECIALISTAS
PEONES
MENORES_DE_18_ANNOS
}

Printable <|.. Persona
Printable <|.. Colegio
Persona <|-- Empleado
Persona <|-- Alumno
Empleado <|-- Profesor
Empleado <|-- PersonalAuxiliar
PersonalAuxiliar <|-- Administrativo
PersonalAuxiliar <|-- Mantenimiento
Empleado "*" ---o "0" Colegio:tiene
Colegio "0" o-- "*" Titulacion:tiene
Salario  - Empleado
Empleado - GrupoCotizacion
GrupoProfesional -- Empleado

Asignatura - Alumno
Titulacion *- Curso
Curso - Asignatura

Curso -- MatriculaAsignatura
MatriculaAsignatura <|-- MatriculaAprobada

@enduml